--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
 		<meta http-equiv='X-UA-Compatible' content='IE=edge'>
-		<title>Notebooks</title>
+		<title>Notebook Archive</title>
 		<meta name="author" content="Jack Guinane" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<link rel="manifest" href="/site.webmanifest">
+		<meta name="msapplication-TileColor" content="#ffffff">
+		<meta name="theme-color" content="#ffffff">
 		<link rel="icon" href="<%= BASE_URL %>favicon.ico">
 		<meta name="robots" content="noindex">
 	</head>
