--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 		<meta http-equiv='X-UA-Compatible' content='IE=edge'>
 		<title>Notebook Archive</title>
 		<meta name="author" content="Jack Guinane" />
+		<link rel="icon" href="<%= BASE_URL %>favicon.svg" type="image/svg+xml">
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
